[workspace]
resolver = "2"
members = [
    "crates/ics12-near",
    "crates/ics12-near/types",
]

[patch.crates-io]
# ibc proto
ibc-proto = { git = "https://github.com/octopus-network/ibc-proto-rs.git", branch = "v0.38.0-octopus"}
# ibc
ibc-core = { git = "https://github.com/octopus-network/ibc-rs.git", branch = "v0.48.1-octopus" }

[workspace.dependencies]
borsh = { version = "1.0", default-features = false, features = ["derive"] }
bytes = { version = "1.5.0", default-features = false }
displaydoc = { version = "0.2", default-features = false }
prost = { version = "0.12", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { package = "serde-json-wasm", version = "1.0.0" , default-features = false }
subtle-encoding     = { version = "0.5", default-features = false }
k256 = { version = "0.13", features = ["ecdsa", "sha256"], default-features = false }
elastic-array = { version = "0.11", default-features = false }
sha2 = { version = "0.10.6", default-features = false }
bs58 = { version = "0.4" }
byteorder = { version = "1.4" }
ed25519-dalek = { version = "1" }


ibc-core    = { version = "0.48.1", default-features = false, features = ["parity-scale-codec", "borsh", "serde"] }
ibc-proto   = { version = "0.38.0", default-features = false, features = ["parity-scale-codec", "borsh", "serde"] }

tendermint = { version = "0.34.0", default-features = false, features = ["secp256k1", "rust-crypto"] }
tendermint-proto = { version = "0.34.0", default-features = false }

# parity dependencies
parity-scale-codec = { version = "3.6.5", default-features = false, features = ["full"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }

ics12-near-types = { version = "0.1.0", path = "crates/ics12-near/types", default-features = false }
ics12-proto = { version = "0.1.3", default-features = false }
